--- a/css/main.css
+++ b/css/main.css
@@ -937,10 +937,41 @@ table {
   box-sizing: border-box;
 }
 
+.items-text {
+  background-image: url(http://www.sfu.ca/~yanhongw/01.jpg);
+  background-size: 80%;
+  background-repeat: no-repeat;
+  width: 100vw;
+  height: 90vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  margin-top: 5rem;
+}
+
+.items-text h1 {
+  background-color: rgb(255,255,255,0.6);
+  margin-top: 15rem;
+  font-size: 13vw;
+  color: #3A3C4E;
+}
+
+.items-text img {
+  position: relative;
+  top: 20%;
+  left: 20%;
+  width: 30%;
+}
+
+#journal{
+  margin-top: -5rem;
+}
+
 .main_journal{
   display: grid;
   grid-gap: 6px;
-	grid-template-columns:33% 30% 30%;
+	grid-template-columns:33% 33% 33%;
 }
 
 .box {
@@ -952,12 +983,6 @@ table {
   text-align: center;
 }
 
-.items-text h1 {
-  font-size: 10rem;
-  padding: 12.5rem 0 0 15rem;
-  color: #3A3C4E;
-}
-
 .image-link-container {
   width:auto;
 }
@@ -967,55 +992,38 @@ table {
   font-size: 1rem;
 }
 
-.items-text {
-  background-image: url(http://www.sfu.ca/~yanhongw/01.jpg);
-  width: 100vw;
-  height: 90vh;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  text-align: center;
-  background-repeat: no-repeat;
-}
-
-.items-text img {
-  position: relative;
-  top: 100px;
-  left: 250px;
-  width: 30%;
-
-}
+/* journal article */
 
 #article {
   display: grid;
   grid-gap: 40px;
-	grid-template-columns:10% 30% 30% 20%;
-  margin: 20px;
+	grid-template-columns:4% 32% 32% 20%;
+  margin-top: 80px
 
 }
+
+.article-image{
+  margin-top: 5vw;
+}
+
 .article-image-item img{
   margin-top: 100px;
+  width: 100%;
+  height: 100%;
 }
 
 #square {
- width: 320px;
-height: 460px;
+ width: 30vw;
+height: 40vw;
 background: #A9AD9D;
 }
 
 .ariticle-title p {
-  margin-top: 80px;
+  margin-top: 100px;
 }
 
-.ariticle-title hr {
-  margin-top: 150px;
-}
 .article-image img {
-  margin-bottom: 50px;
-}
-
-.article-date {
-  margin-top: 0;
+  margin-bottom: 3vw;
 }
 
 /***** FOOTER *****/
@@ -1109,20 +1117,26 @@ background: #A9AD9D;
 
 /***** ABOUT PAGE *****/
 
-* {
-  box-sizing: border-box;
-}
-
 #about{
   display: grid;
-  grid-gap: 45px;
-	grid-template-columns: 30% 70%;
-  border:1px black;
+  grid-gap: 40px;
+	grid-template-columns: 30% 65%;
+  margin-top: 5rem;
+}
+
+.about-header h2{
+  text-align: center;
 }
 
 #about-detail{
-  margin: 2rem;
+  margin-top: 2rem;
+  margin-bottom: 2rem;
 }
+
+video{
+  margin-top: 2rem;
+}
+
 
 #about-detail table{
   width:50% 50%;
@@ -1131,8 +1145,7 @@ background: #A9AD9D;
 }
 
 #about-detail img{
-  width: 30rem;
-  height:30rem;
+  width:100%;
   margin-top: 2rem;
 }
 
@@ -1150,9 +1163,8 @@ background: #A9AD9D;
   margin-top: 2rem;
 }
 iframe{
-  width: 60rem;
-  height: 30rem;
-  border-color: white;
+  width: 100%;
+  height: 20rem;
 }
 
 
@@ -1605,5 +1617,236 @@ iframe{
 
   .brand-imagery img {
     width: 40%;
+  }
+}
+
+
+/* Extra @media setting for journal.html, journal_detail.html, and about.html */
+
+@media screen and (max-width: 1199px) {
+    /* responsive for journal */
+    .items-text {
+      background-size: 70%;
+    }
+
+    .items-text h1 {
+      margin-top: -21rem;
+    }
+
+    .items-text img {
+      margin-top: -60rem;
+    }
+
+    #journal{
+      margin-top: -15rem;
+    }
+
+    .main_journal{
+      margin-bottom: 5rem;
+    }
+}
+
+@media screen and (max-width: 1024px) {
+    /* responsive for journal */
+    .items-text {
+      background-size: 80%;
+    }
+
+    .items-text img {
+      margin-top: -60rem;
+    }
+
+    #journal{
+      margin-top: -40rem;
+    }
+}
+
+@media screen and (max-width: 959px){
+  /* responsive for about */
+
+  /* responsive for journal */
+  .items-text {
+    background-size: 70%;
+  }
+
+  .items-text h1 {
+    margin-top: -15rem;
+    font-size: 15vw;;
+  }
+
+  .items-text img {
+    margin-top: -50rem;
+    left: 10%;
+  }
+
+  #journal{
+    margin-top: -25rem;
+  }
+
+/* responsive for journal article*/
+
+  #article {
+    display: grid;
+  	grid-template-columns: 1% 30% 50%;
+    margin-top: 10vw;
+  }
+
+  .article-image-items p{
+   font-size: .5vw;
+  }
+
+  .article-image-items h1{
+    font-size:5vw;
+  }
+  .article-image-items h5{
+    font-size:1vw;
+  }
+  .ariticle-title {
+    padding-right: 0px;
+  }
+  #author{
+    display: none;
+  }
+}
+
+@media screen and (max-width: 768px) {
+    /* responsive for journal */
+    .items-text h1 {
+      margin-top: -18rem;
+    }
+
+    .items-text img {
+      margin-top: -50rem;
+    }
+
+    #journal{
+      margin-top: -35rem;
+    }
+
+    /* responsive for journal article*/
+
+}
+
+
+@media screen and (max-width: 414px){
+  /* responsive for about */
+  #about {
+      display: block;
+  }
+
+  #about-detail p{
+    font-size: 12px;
+  }
+
+  #about-img-item img{
+    width:300px;
+    height: 150px;
+  }
+
+  .about-header h2{
+    font-size:36px;
+    text-align: center;
+  }
+
+  .about-header h4{
+    text-align: center;
+  }
+
+  #about-detail img{
+    margin-top: 1vw;
+  }
+
+  ul.icon_lists{
+    text-align: center;
+  }
+
+  /* responsive for journal */
+  .items-text {
+    background-size: 88%;
+    margin-top: 3rem;
+  }
+
+  .items-text h1 {
+    margin-top: -17rem;
+    margin-left: -50px;
+  }
+
+  .items-text img {
+    display: none;
+  }
+
+  #journal{
+    margin-top: -30rem;
+  }
+
+  .main_journal{
+    display: flex;
+    flex-wrap: wrap;
+    margin-bottom: 0;
+  }
+
+  /* responsive for journal article*/
+
+  #article{
+     display: block;
+     margin: 20vw;
+   }
+
+  #square {
+    width: 100%;
+    height: 20vh;
+  }
+
+  .article-image-items{
+    margin-top: -6rem;
+  }
+
+  .article-image-items h1{
+    padding-left: 2vw;
+    padding-right: 2vw;
+  }
+
+  .article-image-items h5{
+    display: none;
+  }
+
+  .article-image{
+    margin-top: 15vw;
+  }
+  .article-image img{
+    display: inline-block;
+    width: 25vw;
+    height: 20vw;
+    margin-right: 4vw;
+  }
+
+  .ariticle-title p{
+    margin-top: 10vw;
+  }
+
+   .ariticle-title {
+    margin-bottom: 40vw;
+   }
+   #author{
+     display: none;
+   }
+}
+
+
+@media screen and (max-width: 375px){
+  /* responsive for journal article*/
+  #square{
+    margin-top: 20vw;
+  }
+  .items-text h1 {
+    margin-top: -20rem;
+  }
+  .article-image img{
+    display: none;
+  }
+
+  /* responsive for journal */
+  #journal{
+    margin-top: -35rem;
   }
 }
