--- a/css/main.css
+++ b/css/main.css
@@ -985,34 +985,35 @@ table {
 }
 
 .items-text {
-  background-image: url(http://www.sfu.ca/~yanhongw/01.jpg);
-  background-size: 80%;
-  background-repeat: no-repeat;
-  width: 100vw;
-  height: 90vh;
   display: flex;
   justify-content: center;
   align-items: center;
   text-align: center;
-  margin-top: 5rem;
+  margin-top: 3vw;
 }
 
 .items-text h1 {
-  background-color: rgb(255,255,255,0.6);
-  margin-top: 15rem;
+  position: absolute;
+  top: 5vw;
+  left:30vh;
+  margin-top: 20rem;
   font-size: 13vw;
-  color: #3A3C4E;
+  color: #FFB523;
 }
 
 .items-text img {
   position: relative;
-  top: 20%;
-  left: 20%;
-  width: 30%;
+  width: 80%;
+}
+
+#journal_overview{
+  background:#F5F5F2;
 }
 
 #journal{
-  margin-top: -5rem;
+  position: relative;
+  top: 50px;
+  margin-bottom: 10vw;
 }
 
 .main_journal{
@@ -1238,6 +1239,7 @@ iframe{
   #main_footer #footer-nav .block {
     width: 30%;
   }
+
 }
 
 @media screen and (max-width: 1190px) {
@@ -1746,38 +1748,22 @@ iframe{
 @media screen and (max-width: 1199px) {
     /* responsive for journal */
     .items-text {
-      background-size: 70%;
-    }
-
-    .items-text h1 {
-      margin-top: -21rem;
+      margin-top: 2vw;
     }
 
     .items-text img {
-      margin-top: -60rem;
+      margin-top: 5vw;
     }
 
     #journal{
-      margin-top: -15rem;
-    }
-
-    .main_journal{
-      margin-bottom: 5rem;
+      margin-top: 5vw;
     }
 }
 
 @media screen and (max-width: 1024px) {
     /* responsive for journal */
-    .items-text {
-      background-size: 80%;
-    }
-
-    .items-text img {
-      margin-top: -60rem;
-    }
-
-    #journal{
-      margin-top: -40rem;
+    .items-text h1{
+      left: 20vw;
     }
 }
 
@@ -1785,23 +1771,16 @@ iframe{
   /* responsive for about */
 
   /* responsive for journal */
-  .items-text {
-    background-size: 70%;
-  }
 
   .items-text h1 {
-    margin-top: -15rem;
     font-size: 15vw;;
+    left: 15vw;
   }
 
   .items-text img {
-    margin-top: -50rem;
-    left: 10%;
+    left: 5%;
   }
 
-  #journal{
-    margin-top: -25rem;
-  }
 
 /* responsive for journal article*/
 
@@ -1832,15 +1811,15 @@ iframe{
 @media screen and (max-width: 768px) {
     /* responsive for journal */
     .items-text h1 {
-      margin-top: -18rem;
+      margin-top: 25vw;
     }
 
     .items-text img {
-      margin-top: -50rem;
+
     }
 
     #journal{
-      margin-top: -35rem;
+
     }
 
     /* responsive for journal article*/
@@ -1887,8 +1866,9 @@ iframe{
   }
 
   .items-text h1 {
-    margin-top: -17rem;
-    margin-left: -50px;
+    margin-top: 10vw;
+    color: black;
+    text-shadow: none;
   }
 
   .items-text img {
@@ -1896,7 +1876,6 @@ iframe{
   }
 
   #journal{
-    margin-top: -30rem;
   }
 
   .main_journal{
@@ -1918,7 +1897,7 @@ iframe{
   }
 
   .article-image-items{
-    margin-top: -6rem;
+    margin-top: -20vw;
   }
 
   .article-image-items h1{
@@ -1959,7 +1938,6 @@ iframe{
     margin-top: 20vw;
   }
   .items-text h1 {
-    margin-top: -20rem;
   }
   .article-image img{
     display: none;
@@ -1967,6 +1945,5 @@ iframe{
 
   /* responsive for journal */
   #journal{
-    margin-top: -35rem;
   }
 }
