--- a/css/main.css
+++ b/css/main.css
@@ -952,8 +952,10 @@ table {
 
   background-position: center center;
   background-repeat: no-repeat;
-  background-size: cocer;
+  background-size: cover;
   position: relative;
+  background-color: lightgray;
+  background-blend-mode: multiply;
 }
 
 .hero-banner-img h1 {
